--- a/Tabla_simon/nbproject/project.properties
+++ b/Tabla_simon/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/Tabla_simon.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.javacsv.jar=C:\\Users\\sfv02\\Downloads\\javacsv2.1\\javacsv.jar
 file.reference.opencsv-4.6.jar=C:\\Users\\sfv02\\Downloads\\opencsv-4.6.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -36,7 +37,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.opencsv-4.6.jar}
+    ${file.reference.opencsv-4.6.jar}:\
+    ${file.reference.javacsv.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
